fix: improve descriptions and default values in OpenAPI spec
(cherry picked from commit 5d3fed37f9a9927e9361e737a994eec4d2cfe049)